--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       border-radius: 10px;
     }
     .text {
+      width: 100%;
+      position: relative;
       text-align: center;
       margin-top: 25vh;
     }
@@ -288,7 +290,7 @@
       border-radius: 70px;
       margin-right: 10px;
     }
-    @media (max-width: 1163) {
+    @media (min-width: 1163) {
       .box-nav {
         flex-direction: row;
       }
@@ -439,7 +441,7 @@
           <h3>About Us</h3>
           <li>Promotions</li>
           <li>Customer Care</li>
-          <li>Legal Infrmation</li>
+          <li>Legal Information</li>
           <li>Achievements</li>
           <li>Careers</li>
         </ul>
